# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: brain_game_logic.py  cli.py
brain_games/games/: brain_calc_logic.py  brain_even_logic.py  brain_game.py  brain_game_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game_run.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
